--- a/index.html
+++ b/index.html
@@ -253,8 +253,9 @@
             <div class="col-4" style="width: 468.25px; margin-right: 10px;">
               <div class="single-items">
                 <div class="items-img">
-                  <img src="https://club-valle-del-volcan.hotelesenpatagonia.com/data/Photos/r1920x1080/6149/614911/614911755.JPEG" alt=""
-                    data-pagespeed-url-hash="156695024"
+                  <img
+                    src="https://club-valle-del-volcan.hotelesenpatagonia.com/data/Photos/r1920x1080/6149/614911/614911755.JPEG"
+                    alt="" data-pagespeed-url-hash="156695024"
                     onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
                 </div>
                 <div class="items-cap">
@@ -270,13 +271,15 @@
             <div class="col-4" style="width: 468.25px; margin-right: 10px;">
               <div class="single-items">
                 <div class="items-img">
-                  <img src="https://club-valle-del-volcan.hotelesenpatagonia.com/data/Photos/r1920x1080/6149/614912/614912245.JPEG" alt=""
-                    data-pagespeed-url-hash="156695024"
+                  <img
+                    src="https://club-valle-del-volcan.hotelesenpatagonia.com/data/Photos/r1920x1080/6149/614912/614912245.JPEG"
+                    alt="" data-pagespeed-url-hash="156695024"
                     onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
                 </div>
                 <div class="items-cap">
                   <div class="d-flex justify-content-between">
-                    <h5><a href="https://preview.colorlib.com/theme/ecoho/index.html#">Jornada con pesión completa</a></h5>
+                    <h5><a href="https://preview.colorlib.com/theme/ecoho/index.html#">Jornada con pesión completa</a>
+                    </h5>
                     <span>$<span id="precio-jornada-con-pension-completa">450</span>/Noche</span>
                   </div>
                   <p>Alojamiento con las 4 comidas!</p>
@@ -286,13 +289,15 @@
             <div class="col-4" style="width: 468.25px; margin-right: 10px;">
               <div class="single-items">
                 <div class="items-img">
-                  <img src="https://club-valle-del-volcan.hotelesenpatagonia.com/data/Photos/r1920x1080/6160/616088/616088640.JPEG" alt=""
-                    data-pagespeed-url-hash="4157162399"
+                  <img
+                    src="https://club-valle-del-volcan.hotelesenpatagonia.com/data/Photos/r1920x1080/6160/616088/616088640.JPEG"
+                    alt="" data-pagespeed-url-hash="4157162399"
                     onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
                 </div>
                 <div class="items-cap">
                   <div class="d-flex justify-content-between">
-                    <h5><a href="https://preview.colorlib.com/theme/ecoho/index.html#">Jornada con media pensión</a></h5>
+                    <h5><a href="https://preview.colorlib.com/theme/ecoho/index.html#">Jornada con media pensión</a>
+                    </h5>
                     <span>$<span id="precio-jornada-con-media-pension">450</span>/Noche</span>
                   </div>
                   <p>Alojamiento con almuerzo o cena.</p>
@@ -329,7 +334,8 @@
             <div class="about-caption">
               <div class="section-tittle section-tittle2 ">
                 <h2>Consulta disponibilidad para alojarte con nosotros</h2>
-                <p>Nuestra política de venta Low Cost nos permite siempre brindar el precio más bajo del mercado, garantizando una relación precio-calidad excelente.</p>
+                <p>Nuestra política de venta Low Cost nos permite siempre brindar el precio más bajo del mercado,
+                  garantizando una relación precio-calidad excelente.</p>
               </div>
             </div>
           </div>
@@ -365,40 +371,12 @@
                     </div>
                   </div>
                   <div class="col-lg-12 col-md-6 mb-15">
-                    <div class="select-itms">
-                      <select name="select" id="select2" style="display: none;">
-                        <option value="">Room</option>
-                        <option value="">Room one</option>
-                        <option value="">Room Two</option>
-                        <option value="">Room Three</option>
-                      </select>
-                      <div class="nice-select" tabindex="0"><span class="current">Room</span>
-                        <ul class="list">
-                          <li data-value="" class="option selected">Room</li>
-                          <li data-value="" class="option">Room one</li>
-                          <li data-value="" class="option">Room Two</li>
-                          <li data-value="" class="option">Room Three</li>
-                        </ul>
-                      </div>
+                    <div class="d-flex justify-content-center">
+                      <img src="https://latinonet.online/assets/img/wpp.png" width="100" />
                     </div>
                   </div>
                   <div class="col-lg-12 col-md-6 mb-15">
-                    <div class="select-itms">
-                      <select name="select" id="select2" style="display: none;">
-                        <option value="">Guest</option>
-                        <option value="">Guest one</option>
-                        <option value="">Guest Two</option>
-                        <option value="">Guest Three</option>
-                      </select>
-                      <div class="nice-select" tabindex="0"><span class="current">Guest</span>
-                        <ul class="list">
-                          <li data-value="" class="option selected">Guest</li>
-                          <li data-value="" class="option">Guest one</li>
-                          <li data-value="" class="option">Guest Two</li>
-                          <li data-value="" class="option">Guest Three</li>
-                        </ul>
-                      </div>
-                    </div>
+
                   </div>
                   <div class="col-lg-12">
                     <div class="submit-info">
