carrousel insragram funciona

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/tiny-slider.css">
 </head>
 
 <body style="overflow: visible;">
@@ -562,138 +564,135 @@
       <div class="container-fluid p-0">
         <div class="row">
           <div class="col-xl-12">
-            <div class="instagram-active owl-carousel owl-loaded owl-drag">
-              <div class="owl-stage-outer">
-                <div class="owl-stage"
-                  style="transform: translate3d(-1903px, 0px, 0px); transition: all 0s ease 0s; width: 6090px;">
-                  <div class="owl-item cloned" style="width: 380.6px;">
-                    <div class="single-instagram">
-                      <img src="./Hotel - Template_files/xinstra2.png.pagespeed.ic.ZGy1eocwA2.webp" alt=""
-                        data-pagespeed-url-hash="690670649"
-                        onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-                      <a href="https://preview.colorlib.com/theme/ecoho/index.html#"><i class="ti-instagram"></i></a>
-                    </div>
-                  </div>
-                  <div class="owl-item cloned" style="width: 380.6px;">
-                    <div class="single-instagram">
-                      <img src="./Hotel - Template_files/xinstra3.png.pagespeed.ic.PjyP4aE_az.webp" alt=""
-                        data-pagespeed-url-hash="985170570"
-                        onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-                      <a href="https://preview.colorlib.com/theme/ecoho/index.html#"><i class="ti-instagram"></i></a>
-                    </div>
-                  </div>
-                  <div class="owl-item cloned" style="width: 380.6px;">
-                    <div class="single-instagram">
-                      <img src="./Hotel - Template_files/xinstra4.png.pagespeed.ic.V-uJTbjLSh.webp" alt=""
-                        data-pagespeed-url-hash="1279670491"
-                        onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-                      <a href="https://preview.colorlib.com/theme/ecoho/index.html#"><i class="ti-instagram"></i></a>
-                    </div>
-                  </div>
-                  <div class="owl-item cloned" style="width: 380.6px;">
-                    <div class="single-instagram">
-                      <img src="./Hotel - Template_files/xinstra1.png.pagespeed.ic.hPSBHSHx8i.webp" alt=""
-                        data-pagespeed-url-hash="396170728"
-                        onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-                      <a href="https://preview.colorlib.com/theme/ecoho/index.html#"><i class="ti-instagram"></i></a>
-                    </div>
-                  </div>
-                  <div class="owl-item cloned" style="width: 380.6px;">
-                    <div class="single-instagram">
-                      <img src="./Hotel - Template_files/xinstra4.png.pagespeed.ic.V-uJTbjLSh.webp" alt=""
-                        data-pagespeed-url-hash="1279670491"
-                        onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-                      <a href="https://preview.colorlib.com/theme/ecoho/index.html#"><i class="ti-instagram"></i></a>
-                    </div>
-                  </div>
-                  <div class="owl-item active" style="width: 380.6px;">
-                    <div class="single-instagram">
-                      <img src="./Hotel - Template_files/xinstra1.png.pagespeed.ic.hPSBHSHx8i.webp" alt=""
-                        data-pagespeed-url-hash="396170728"
-                        onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-                      <a href="https://preview.colorlib.com/theme/ecoho/index.html#"><i class="ti-instagram"></i></a>
-                    </div>
-                  </div>
-                  <div class="owl-item active" style="width: 380.6px;">
-                    <div class="single-instagram">
-                      <img src="./Hotel - Template_files/xinstra2.png.pagespeed.ic.ZGy1eocwA2.webp" alt=""
-                        data-pagespeed-url-hash="690670649"
-                        onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-                      <a href="https://preview.colorlib.com/theme/ecoho/index.html#"><i class="ti-instagram"></i></a>
-                    </div>
-                  </div>
-                  <div class="owl-item active" style="width: 380.6px;">
-                    <div class="single-instagram">
-                      <img src="./Hotel - Template_files/xinstra3.png.pagespeed.ic.PjyP4aE_az.webp" alt=""
-                        data-pagespeed-url-hash="985170570"
-                        onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-                      <a href="https://preview.colorlib.com/theme/ecoho/index.html#"><i class="ti-instagram"></i></a>
-                    </div>
-                  </div>
-                  <div class="owl-item active" style="width: 380.6px;">
-                    <div class="single-instagram">
-                      <img src="./Hotel - Template_files/xinstra4.png.pagespeed.ic.V-uJTbjLSh.webp" alt=""
-                        data-pagespeed-url-hash="1279670491"
-                        onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-                      <a href="https://preview.colorlib.com/theme/ecoho/index.html#"><i class="ti-instagram"></i></a>
-                    </div>
-                  </div>
-                  <div class="owl-item active" style="width: 380.6px;">
-                    <div class="single-instagram">
-                      <img src="./Hotel - Template_files/xinstra1.png.pagespeed.ic.hPSBHSHx8i.webp" alt=""
-                        data-pagespeed-url-hash="396170728"
-                        onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-                      <a href="https://preview.colorlib.com/theme/ecoho/index.html#"><i class="ti-instagram"></i></a>
-                    </div>
-                  </div>
-                  <div class="owl-item active" style="width: 380.6px;">
-                    <div class="single-instagram">
-                      <img src="./Hotel - Template_files/xinstra4.png.pagespeed.ic.V-uJTbjLSh.webp" alt=""
-                        data-pagespeed-url-hash="1279670491"
-                        onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-                      <a href="https://preview.colorlib.com/theme/ecoho/index.html#"><i class="ti-instagram"></i></a>
-                    </div>
-                  </div>
-                  <div class="owl-item cloned" style="width: 380.6px;">
-                    <div class="single-instagram">
-                      <img src="./Hotel - Template_files/xinstra1.png.pagespeed.ic.hPSBHSHx8i.webp" alt=""
-                        data-pagespeed-url-hash="396170728"
-                        onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-                      <a href="https://preview.colorlib.com/theme/ecoho/index.html#"><i class="ti-instagram"></i></a>
-                    </div>
-                  </div>
-                  <div class="owl-item cloned" style="width: 380.6px;">
-                    <div class="single-instagram">
-                      <img src="./Hotel - Template_files/xinstra2.png.pagespeed.ic.ZGy1eocwA2.webp" alt=""
-                        data-pagespeed-url-hash="690670649"
-                        onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-                      <a href="https://preview.colorlib.com/theme/ecoho/index.html#"><i class="ti-instagram"></i></a>
-                    </div>
-                  </div>
-                  <div class="owl-item cloned" style="width: 380.6px;">
-                    <div class="single-instagram">
-                      <img src="./Hotel - Template_files/xinstra3.png.pagespeed.ic.PjyP4aE_az.webp" alt=""
-                        data-pagespeed-url-hash="985170570"
-                        onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-                      <a href="https://preview.colorlib.com/theme/ecoho/index.html#"><i class="ti-instagram"></i></a>
-                    </div>
-                  </div>
-                  <div class="owl-item cloned" style="width: 380.6px;">
-                    <div class="single-instagram">
-                      <img src="./Hotel - Template_files/xinstra4.png.pagespeed.ic.V-uJTbjLSh.webp" alt=""
-                        data-pagespeed-url-hash="1279670491"
-                        onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-                      <a href="https://preview.colorlib.com/theme/ecoho/index.html#"><i class="ti-instagram"></i></a>
-                    </div>
-                  </div>
-                  <div class="owl-item cloned" style="width: 380.6px;">
-                    <div class="single-instagram">
-                      <img src="./Hotel - Template_files/xinstra1.png.pagespeed.ic.hPSBHSHx8i.webp" alt=""
-                        data-pagespeed-url-hash="396170728"
-                        onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-                      <a href="https://preview.colorlib.com/theme/ecoho/index.html#"><i class="ti-instagram"></i></a>
-                    </div>
-                  </div>
+            <div class="instagram-active">
+              <div class="">
+                <div class="my-slider">
+
+                  <img src="./Hotel - Template_files/xinstra2.png.pagespeed.ic.ZGy1eocwA2.webp" alt=""
+                    data-pagespeed-url-hash="690670649"
+                    onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+
+
+
+
+                  <img src="./Hotel - Template_files/xinstra3.png.pagespeed.ic.PjyP4aE_az.webp" alt=""
+                    data-pagespeed-url-hash="985170570"
+                    onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+
+
+
+
+
+                  <img src="./Hotel - Template_files/xinstra4.png.pagespeed.ic.V-uJTbjLSh.webp" alt=""
+                    data-pagespeed-url-hash="1279670491"
+                    onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+
+
+
+
+
+                  <img src="./Hotel - Template_files/xinstra1.png.pagespeed.ic.hPSBHSHx8i.webp" alt=""
+                    data-pagespeed-url-hash="396170728"
+                    onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+
+
+
+
+
+                  <img src="./Hotel - Template_files/xinstra4.png.pagespeed.ic.V-uJTbjLSh.webp" alt=""
+                    data-pagespeed-url-hash="1279670491"
+                    onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+
+
+
+
+
+                  <img src="./Hotel - Template_files/xinstra1.png.pagespeed.ic.hPSBHSHx8i.webp" alt=""
+                    data-pagespeed-url-hash="396170728"
+                    onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+
+
+
+
+
+                  <img src="./Hotel - Template_files/xinstra2.png.pagespeed.ic.ZGy1eocwA2.webp" alt=""
+                    data-pagespeed-url-hash="690670649"
+                    onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+
+
+
+
+
+                  <img src="./Hotel - Template_files/xinstra3.png.pagespeed.ic.PjyP4aE_az.webp" alt=""
+                    data-pagespeed-url-hash="985170570"
+                    onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+
+
+
+
+
+                  <img src="./Hotel - Template_files/xinstra4.png.pagespeed.ic.V-uJTbjLSh.webp" alt=""
+                    data-pagespeed-url-hash="1279670491"
+                    onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+
+
+
+
+
+                  <img src="./Hotel - Template_files/xinstra1.png.pagespeed.ic.hPSBHSHx8i.webp" alt=""
+                    data-pagespeed-url-hash="396170728"
+                    onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+
+
+
+
+
+                  <img src="./Hotel - Template_files/xinstra4.png.pagespeed.ic.V-uJTbjLSh.webp" alt=""
+                    data-pagespeed-url-hash="1279670491"
+                    onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+
+
+
+
+
+                  <img src="./Hotel - Template_files/xinstra1.png.pagespeed.ic.hPSBHSHx8i.webp" alt=""
+                    data-pagespeed-url-hash="396170728"
+                    onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+
+
+
+
+
+                  <img src="./Hotel - Template_files/xinstra2.png.pagespeed.ic.ZGy1eocwA2.webp" alt=""
+                    data-pagespeed-url-hash="690670649"
+                    onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+
+
+
+
+
+                  <img src="./Hotel - Template_files/xinstra3.png.pagespeed.ic.PjyP4aE_az.webp" alt=""
+                    data-pagespeed-url-hash="985170570"
+                    onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+
+
+
+
+
+                  <img src="./Hotel - Template_files/xinstra4.png.pagespeed.ic.V-uJTbjLSh.webp" alt=""
+                    data-pagespeed-url-hash="1279670491"
+                    onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+
+
+
+
+
+                  <img src="./Hotel - Template_files/xinstra1.png.pagespeed.ic.hPSBHSHx8i.webp" alt=""
+                    data-pagespeed-url-hash="396170728"
+                    onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+
+
+
                 </div>
               </div>
               <div class="owl-nav disabled">
@@ -800,6 +799,9 @@
         class="fas fa-level-up-alt"></i></a>
   </div>
 
+  <div id="botones" style="display: block;">
+
+  </div>
 
   <script src="./Hotel - Template_files/modernizr-3.5.0.min.js.descargar"></script>
   <script src="./Hotel - Template_files/jquery-1.12.4.min.js.descargar"></script>
@@ -857,7 +859,39 @@
   </script>
   <script defer="" src="./Hotel - Template_files/beacon.min.js.descargar"
     data-cf-beacon="{&quot;rayId&quot;:&quot;6708de299eecf7fe&quot;,&quot;token&quot;:&quot;cd0b4b3a733644fc843ef0b185f98241&quot;,&quot;version&quot;:&quot;2021.6.0&quot;,&quot;si&quot;:10}"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
 
+
+  <script>
+    tns({
+      container: '.my-slider',
+      autoplay: true,
+      autoplayTimeout: 1000,
+      swipeAngle: false,
+      speed: 400,
+      items: 2,
+      mouseDrag: true,
+      nav: false,
+      controls: false,
+      autoplayButtonOutput: false,
+      responsive: {
+        640: {
+          edgePadding: 20,
+          gutter: 20,
+          items: 2
+        },
+        700: {
+          gutter: 30
+        },
+        900: {
+          items: 3
+        },
+        900: {
+          items: 5
+        }
+      }
+    });
+  </script>
 </body>
 
 </html>
