cambios de nombes de archivos

--- a/index.html
+++ b/index.html
@@ -552,7 +552,8 @@
                   </div>
                 </div>
               </div>
-            </div><button type="button" class="slick-next slick-arrow" style="display: block;"><i class="fas fa-arrow-right"></i></button>
+            </div>
+            <button type="button" class="slick-next slick-arrow" style="display: block;"><i class="fas fa-arrow-right"></i></button>
           </div>
         </div>
       </div>
@@ -565,7 +566,7 @@
           <div class="col-xl-12">
             <div class="instagram-active">
               <div class="">
-                <div class="my-slider">
+                <div class="my-slider-photos">
 
                   <img src="./Hotel - Template_files/xinstra2.png.pagespeed.ic.ZGy1eocwA2.webp" alt=""
                     data-pagespeed-url-hash="690670649"
@@ -811,11 +812,11 @@
     integrity="sha512-IsNh5E3eYy3tr/JiX2Yx4vsCujtkhwl7SLqgnwLNgf04Hrt9BT9SXlLlZlWx+OK4ndzAoALhsMNcCmkggjZB1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-  <script src="./Hotel - Template_files/slick.min.js.descargar"></script>
+  <script src="./Hotel - Template_files/slick.min.js"></script>
 
-  <script src="./Hotel - Template_files/gijgo.min.js.descargar"></script>
+  <script src="./Hotel - Template_files/gijgo.min.js"></script>
   <script
-    src="./Hotel - Template_files/jquery.slicknav.min.js+jquery.nice-select.min.js+jquery.barfiller.js+jquery.counterup.min.js+waypoints.min.js+jquery.countdown.min.js+hover-direction-snake.min.js+contact.js+jquery.form.js.pagesp.descargar"></script>
+    src="./Hotel - Template_files/jquery.slicknav.min.js+jquery.nice-select.min.js+jquery.barfiller.js+jquery.counterup.min.js+waypoints.min.js+jquery.countdown.min.js+hover-direction-snake.min.js+contact.js+jquery.form.js"></script>
   <script>eval(mod_pagespeed_YOvPA3tBg_);</script>
   <script>eval(mod_pagespeed_tphPVClLWC);</script>
   <script>eval(mod_pagespeed_kgo5JsW2_d);</script>
@@ -828,7 +829,7 @@
   <script>eval(mod_pagespeed_fiqkRieeRA);</script>
   <script>eval(mod_pagespeed_ceuYpyL2Vb);</script>
   <script
-    src="./Hotel - Template_files/jquery.validate.min.js+mail-script.js+jquery.ajaxchimp.min.js+plugins.js+main.js.pagespeed.jc.EE9NyUiiwO.js.descargar"></script>
+    src="./Hotel - Template_files/jquery.validate.min.js+mail-script.js+jquery.ajaxchimp.min.js+plugins.js+main.js.pagespeed.jc.EE9NyUiiwO.js"></script>
   <script>eval(mod_pagespeed_B4qCqtW6wi);</script>
   <script>eval(mod_pagespeed_XRdbePmryY);</script>
   <script>eval(mod_pagespeed_HPkAbDkdnN);</script>
@@ -852,14 +853,14 @@
 
     gtag('config', 'UA-23581568-13');
   </script>
-  <script defer="" src="./Hotel - Template_files/beacon.min.js.descargar"
+  <script defer="" src="./Hotel - Template_files/beacon.min.js"
     data-cf-beacon="{&quot;rayId&quot;:&quot;6708de299eecf7fe&quot;,&quot;token&quot;:&quot;cd0b4b3a733644fc843ef0b185f98241&quot;,&quot;version&quot;:&quot;2021.6.0&quot;,&quot;si&quot;:10}"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
 
 
   <script>
     tns({
-      container: '.my-slider',
+      container: '.my-slider-photos',
       autoplay: true,
       autoplayTimeout: 1000,
       swipeAngle: false,
