arreglo funciona javascript

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
             <div class="col-12">
               <div class="mobile_menu d-block d-lg-none">
-                <div class="slicknav_menu"><a href="#"
+                <!-- <div class="slicknav_menu"><a href="#"
                     aria-haspopup="true" role="button" tabindex="0" class="slicknav_btn slicknav_collapsed"
                     style="outline: none;"><span class="slicknav_menutxt">MENU</span><span class="slicknav_icon"><span
                         class="slicknav_icon-bar"></span><span class="slicknav_icon-bar"></span><span
@@ -145,7 +145,7 @@
                       </div>
                     </li>
                   </ul>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
@@ -786,9 +786,9 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-countdown/2.1.0/js/jquery.countdown.min.js"
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-countdown/2.1.0/js/jquery.countdown.min.js"
     integrity="sha512-+Cdr05lT+aP+PTW4988XKLMjoAf0o5P2nRDIHooD/NItysfsyCPPhZhK/C6s7ZpaVoMRtsvRNJLtYOTDANC5UA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
   <script src="./Hotel - Template_files/main2.js"></script>
   <script src="./Hotel - Template_files/main3.js"></script>
 
@@ -799,16 +799,13 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.32/jquery.form.min.js"
     integrity="sha512-QW2MBpA7MCcL3glUWnUQxfta0cAaJ80GHHkBUh0YFn7f/PUG+PoyukCBi6jAmrQHFDKoB8hMSGEE9w+nLf3bEQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.11.1/jquery.validate.min.js" integrity="sha512-emPswKmLFtjIzEQnECO0K1syIQhO9ZVE5eG+PtirksDTRPj4pDxBqnr8kF64UHO0kO/E6lYVAfCi/4X2aOk6Nw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script
     src="./Hotel - Template_files/jquery.validate.min.js+mail-script.js+jquery.ajaxchimp.min.js+plugins.js+main.js.pagespeed.jc.EE9NyUiiwO.js"></script>
 
 
-  <script>eval(mod_pagespeed_B4qCqtW6wi);</script>
-  <script>eval(mod_pagespeed_XRdbePmryY);</script>
-  <script>eval(mod_pagespeed_HPkAbDkdnN);</script>
-
-  <script>eval(mod_pagespeed_G4bWXSpzf9);</script>
-  <script>eval(mod_pagespeed_W8J9IlL3bT);</script>
   <div role="calendar" type="month" class="gj-picker gj-picker-md datepicker gj-unselectable"
     guid="83d08463-9f9c-40e8-8074-7f21346e58cf" month="6" year="2021" style="display: none;">
     <div role="body"></div>
@@ -828,66 +825,7 @@
   </script>
   <script defer="" src="./Hotel - Template_files/beacon.min.js"
     data-cf-beacon="{&quot;rayId&quot;:&quot;6708de299eecf7fe&quot;,&quot;token&quot;:&quot;cd0b4b3a733644fc843ef0b185f98241&quot;,&quot;version&quot;:&quot;2021.6.0&quot;,&quot;si&quot;:10}"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
 
-
-  <script>
-    tns({
-      container: '.my-slider-clients',
-      autoplay: false,
-      autoplayTimeout: 2000,
-      swipeAngle: false,
-      speed: 200,
-      items: 2,
-      mouseDrag: true,
-      nav: false,
-      autoplayButtonOutput: false,
-      prevButton: "#prevbutton",
-      nextButton: "#nextbutton",
-      responsive: {
-        640: {
-          edgePadding: 20,
-          gutter: 20,
-          items: 2
-        },
-        700: {
-          gutter: 30
-        }
-      }
-    });
-
-    tns({
-      container: '.my-slider-photos',
-      autoplay: true,
-      autoplayTimeout: 4000,
-      swipeAngle: false,
-      speed: 600,
-      items: 2,
-      mouseDrag: true,
-      nav: false,
-      controls: false,
-      autoplayButtonOutput: false,
-      responsive: {
-        640: {
-          edgePadding: 20,
-          gutter: 20,
-          items: 2
-        },
-        700: {
-          gutter: 30
-        },
-        900: {
-          items: 3
-        },
-        900: {
-          items: 5
-        }
-      }
-    });
-
-    $('.popup-video').magnificPopup({ type: 'iframe', closeOnContentClick: true });
-
-  </script>
 </body>
 
 </html>
