--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <li><a href="https://preview.colorlib.com/theme/ecoho/elements.html">Elements</a></li>
                       </ul>
                     </li>
-                    <li><a href="https://preview.colorlib.com/theme/ecoho/contact.html">Contacto</a></li>
+                    <li><a href="contact.html">Contacto</a></li>
                     <li>
                       <div class="header-right-btn f-right  ml-30">
                         <a href="https://preview.colorlib.com/theme/ecoho/index.html#" class="header-btn">Reserva </a>
