linkeo archivo css en el head

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="shortcut icon" type="image/x-icon" href="https://preview.colorlib.com/theme/ecoho/assets/img/favicon.ico">
 
   <link rel="stylesheet"
-    href="./Hotel - Template_files/bootstrap.min.css+owl.carousel.min.css+slicknav.css+progressbar_barfiller.css+gijgo.css+animate.min.css+animated-headline.css+magnific-popup.css+fontawesome-all.min.css+themify-icons.css+slick.css+nice.css">
+    href="./Hotel - Template_files/superpoderoso.css">
   <link rel="stylesheet" href="./Hotel - Template_files/A.style.css.pagespeed.cf.UulOYHHdQH.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
